Securing Workloads/peer_auth_identity.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: identity-peer-auth
  namespace: product
spec:
  mtls:
    mode: STRICT
